Fixed top margin spacing on overflow pages for the resume printout

--- a/app/printout.css
+++ b/app/printout.css
@@ -1,5 +1,9 @@
 @media print{
-  @page {
+  @page{
+    margin: 2rem 0 0 0;
+  }
+
+  @page :first{
     margin: 0;
   }
 
